--- a/ShopMate-User/package.json
+++ b/ShopMate-User/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.25",
     "async": "^3.2.5",
     "expo": "~50.0.6",
+    "expo-camera": "~14.1.1",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
@@ -34,13 +35,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-async-storage": "^0.0.1",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "storage": "^0.2.0",
-    "expo-camera": "~14.1.1"
+    "storage": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
