Configuration files update

--- a/ShopMate-User/app.json
+++ b/ShopMate-User/app.json
@@ -22,7 +22,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.d_seniya.ShopMate"
     },
     "web": {
       "bundler": "metro",
@@ -34,6 +35,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "7494ba5f-6fcf-4dee-abd3-7cd0d6453b8e"
+      }
     }
   }
 }
