--- a/ShopMate-User/package.json
+++ b/ShopMate-User/package.json
@@ -14,16 +14,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-firebase/app": "^19.0.1",
-    "@react-native-firebase/auth": "^19.0.0",
+    "@react-native-firebase/auth": "^19.1.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.3.25",
     "async": "^3.2.5",
-    "expo": "~50.0.6",
-    "expo-font": "~11.10.2",
+    "expo": "^50.0.14",
+    "expo-camera": "~14.1.1",
+    "expo-font": "^11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.7",
+    "expo-router": "^3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -32,21 +33,20 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "storage": "^0.2.0",
-    "expo-camera": "~14.1.1"
+    "storage": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.2",
+    "jest-expo": "^50.0.4",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
